add create category tab on item new

--- a/app/views/item_categories/index.html.haml
+++ b/app/views/item_categories/index.html.haml
@@ -89,5 +89,4 @@
           / </ul>
           / </div>
           = will_paginate @item_categories, renderer: BootstrapPagination::Rails
-%a.hide.nav-off-screen-block{"data-target" => "#nav", "data-toggle" => "class:nav-off-screen", :href => "#"}
-= render partial: "add_item_category"
+= render "add_item_category"
