--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -36,398 +36,33 @@
   font-size: 22px;
 }
 
-.nav-xs{
-  width: 75px;
-}
-
-.nav-xs{
-  min-width: 75px !important;
-  //background-color: #193048 !important;
-  section{
-    nav{
-      ul{
-        li{
-
-          a{
-            //border-bottom: 0.5px solid #F5F5F5;
-            span {
-
-              min-width: 75px !important;
-              text-align: center !important;
-            }
-            //span:hover{
-            //  background-color: #4cc0c1;
-            //}
-
-          }
-
-        }
-      }
-    }
-  }
-}
-
-
-.sap_tabs{
-  clear:both;
-  padding: 0em 0 0em;
-}
-.pay-tabs{
-  margin: 0 0 0 0;
-  padding: 1em 1em 0px 1em;
-  background: #fff;
-  //border: 1px solid #e7ebee;
-}
-.pay-tabs h2{
-  font-size: 26px;
-  text-align: center;
-  margin-bottom: 25px;
-  color: #3AD5A0;
-  font-weight: 500;
-  font-family: 'Alegreya Sans', sans-serif;
-}
-.resp-tabs-list {
-  list-style: none;
-  margin: 0 0 0em 0;
-  padding: 0;
-}
-.resp-tab-item{
-  font-size: 14px;
-  text-decoration: none;
-  color: #a9acb1;
-  font-weight:600;
-  cursor: pointer;
-  text-align: center;
-  list-style: none;
-  outline: none;
-  -webkit-transition: all 0.3s ease-out;
-  -moz-transition: all 0.3s ease-out;
-  -ms-transition: all 0.3s ease-out;
-  -o-transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
-  text-transform:capitalize;
-  display: inline-block;
-  float: left;
-  width: 30%;
-}
-.resp-tab-active{
-  color: #B3E03F;
-}
-.resp-tabs-container {
-  padding: 0px;
-  clear: left;
-  padding: 2em 2.5em;
-  background: #fff;
-  //border: 1px solid #e7ebee;
-}
-h2.resp-accordion {
-  cursor: pointer;
-  padding: 5px;
-  display: none;
-}
-.resp-tab-content {
-  display: none;
-}
-.resp-content-active, .resp-accordion-active {
-  display: block;
-}
-li.resp-tab-item span .pic1{
-  background: image-url('pic2.png') no-repeat 38px 15px #fafafa !important;
-
-}
-#pic1{
-  background: image-url('pic2.png') no-repeat 38px 15px #fafafa !important;
-}
-li.resp-tab-item span .pic2{
-  background: image-url('pic3.png') no-repeat 38px 15px #fafafa !important;
-
-}
-li.resp-tab-item span .pic3{
-  background: image-url('pic1.png') no-repeat 14px 15px #fafafa !important;
-  background: image-url('pic1.png') no-repeat 14px 15px #fafafa !important;
-
-}
-li.resp-tab-item span .pic4{
-  background: image-url('pic4.png') no-repeat 38px 15px #fafafa !important;
-}
-li.resp-tab-item span #pic5{
-  //background: image-url('pic4.png') no-repeat 38px 15px #fafafa !important;
-}
-li.resp-tab-item span .pic1,li.resp-tab-item span .pic2,li.resp-tab-item span .pic3,li.resp-tab-item span .pic4 , li.resp-tab-item span #pic5{
-  width: 100%;
-  height: 63px;
-  display: block;
-  border: 1px solid #e7ebee;
-  padding: 15px 0px;
-  margin-bottom: 15px;
-  cursor:pointer;
-}
-li.resp-tab-item.resp-tab-active span label {
-  border: 1px solid #B3E03F;
-}
-.payment-info h3{
-  font-size: 26px;
-  text-align: center;
-  margin-bottom: 15px;
-  color: #3AD5A0;
-  font-weight: 500;
-  font-family: 'Alegreya Sans', sans-serif;
-}
-.tab-for h5 ,.tab-form-left h5,.tab-form-right h5{
-  color: #435964;
-  font-size: 13px;
-  text-transform: uppercase;
-  margin: 0 0 8px 0;
-  font-weight: 600;
-}
-.tab-for input[type="text"]:hover{
-  border: 1px solid #B3E03F;
-  transition:0.5s all;
-  -webkit-transition:0.5s all;
-  -moz-transition:0.5s all;
-  -o-transition:0.5s all;
-  -ms-transition:0.5s all;
-}
-.tab-form-left {
-  float: left;
-  width: 48%;
-}
-/*-- responsive media queries --*/
-@media (max-width: 1440px){
-  li.resp-tab-item span .pic3 {
-    background: image-url('pic1.png') no-repeat 8px 15px #fafafa !important;
-  }
-  li.resp-tab-item span .pic1 {
-    background: image-url('pic2.png') no-repeat 29px 15px #fafafa !important;
-  }
-  li.resp-tab-item span .pic4 {
-    background: image-url('pic4.png') no-repeat 31px 15px #fafafa !important;
-  }
-  li.resp-tab-item span .pic2 {
-    background: image-url('pic3.png') no-repeat 29px 15px #fafafa !important;
-  }
-}
-@media (max-width: 1366px){
-  .content {
-    width: 41.5%;
-    margin: 0 auto;
-  }
-  input.pay-logo {
-    width: 88.5% !important;
-  }
-}
-@media (max-width: 1280px){
-  .resp-tab-item {
-    margin: 0 3%;
-    width: 29%;
-  }
-  input.pay-logo {
-    width: 87% !important;
-  }
-  .single-bottom ul li input[type="checkbox"]+label {
-    padding-left: 24px;
-  }
-}
-@media (max-width: 1080px){
-  .content {
-    width: 48.5%;
-    margin: 0 auto;
-  }
-  .tab-form-right input[type="text"] {
-    width: 91%;
-  }
-}
-@media (max-width: 1024px){
-  .content {
-    width: 49.5%;
-    margin: 0 auto;
-  }
-  .swit {
-    float: left;
-    width: 44%;
-    margin-right: 6%;
-  }
-}
-@media (max-width: 991px){
-  .pay-tabs h2 ,.payment-info h3{
-    font-size: 22px;
-  }
-  .resp-tab-item {
-    margin: 0 2%;
-    width: 21%;
-  }
-  .user-form ul li {
-    width: 29%;
-  }
-  .swit {
-    margin-right: 12%;
-  }
-  .swit:nth-child(2) {
-    margin: 0;
-  }
-}
-@media (max-width: 800px){
-  .content {
-    width: 60%;
-    margin: 0 auto;
-  }
-  input.pay-logo {
-    width: 85% !important;
-  }
-}
-@media (max-width: 480px){
-  .content {
-    width: 92%;
-  }
-  li.resp-tab-item span .pic3 {
-    background: image-url('pic1.png') no-repeat 5px 15px #fafafa !important;
-  }
-  li.resp-tab-item span .pic1 {
-    background: image-url('pic2.png') no-repeat 26px 15px #fafafa !important;
-  }
-  li.resp-tab-item span .pic4 {
-    background: image-url('pic4.png') no-repeat 27px 15px #fafafa !important;
-  }
-  li.resp-tab-item span .pic2 {
-    background: image-url('pic3.png') no-repeat 25px 15px #fafafa !important;
-  }
-  .resp-tabs-container {
-    padding: 1em 1em;
-  }
-}
-@media (max-width: 414px){
-  .resp-tab-item {
-    margin: 0 6%;
-    width: 38%;
-  }
-  li.resp-tab-item span .pic1 {
-    background: image-url('pic2.png') no-repeat 46px 15px #fafafa !important;
-  }
-  li.resp-tab-item span .pic3 {
-    background: image-url('pic1.png') no-repeat 27px 15px #fafafa !important;
-  }
-  li.resp-tab-item span .pic4 {
-    background: image-url('pic4.png') no-repeat 50px 15px #fafafa !important;
-  }
-  li.resp-tab-item span .pic2 {
-    background: image-url('pic3.png') no-repeat 46px 15px #fafafa !important;
-  }
-  li.resp-tab-item:nth-child(3) ,li.resp-tab-item:nth-child(4){
-    margin-top: 25px;
-  }
-  .tab-for input[type="text"] {
-    width: 94%;
-  }
-  input.pay-logo {
-    width: 83% !important;
-  }
-  .tab-form-right input[type="text"] {
-    width: 86%;
-  }
-  .swit {
-    float: left;
-    width: 48%;
-    margin-right: 4%;
-  }
-  .swit:nth-child(2) {
-    margin: 0;
-  }
-  .user-login form input[type="text"], .user-login form input[type="password"] {
-    width: 90%;
-  }
-}
-@media (max-width: 384px){
-  input.pay-logo {
-    width: 81% !important;
-  }
-  .user-form ul li {
-    width: 37%;
-  }
-  li.resp-tab-item span .pic1 {
-    background: image-url('pic2.png') no-repeat 42px 15px #fafafa !important;
-  }
-  li.resp-tab-item span .pic3 {
-    background: image-url('pic1.png') no-repeat 20px 15px #fafafa !important;
-  }
-  li.resp-tab-item span .pic4 {
-    background: image-url('pic4.png') no-repeat 44px 15px #fafafa !important;
-  }
-  li.resp-tab-item span .pic2 {
-    background: image-url('pic3.png') no-repeat 42px 15px #fafafa !important;
-  }
-  .swit {
-    float: left;
-    width: 100%;
-    margin-right: 0;
-  }
-  .user-login form input[type="text"], .user-login form input[type="password"] {
-    width: 89%;
-  }
-}
-@media (max-width: 375px){
-
-}
-@media (max-width: 320px){
-  .main h1 {
-    font-size: 20px;
-  }
-  .main {
-    padding: 45px 0;
-  }
-  .pay-tabs h2, .payment-info h3 {
-    font-size: 19px;
-  }
-  li.resp-tab-item span .pic1, li.resp-tab-item span .pic2, li.resp-tab-item span .pic3, li.resp-tab-item span .pic4 {
-    padding: 12px 0px;
-  }
-  li.resp-tab-item span .pic1 {
-    background: image-url("pic2.png") no-repeat 32px 13px #fafafa !important;
-  }
-  li.resp-tab-item span .pic3 {
-    background: image-url('pic1.png') no-repeat 10px 11px #fafafa !important;
-  }
-  li.resp-tab-item span .pic4 {
-    background: image-url('pic4.png') no-repeat 34px 12px #fafafa !important;
-  }
-  li.resp-tab-item span .pic2 {
-    background: image-url('pic3.png') no-repeat 30px 12px #fafafa !important;
-  }
-  .pay-tabs {
-    margin: 0 0 1.5em 0;
-  }
-  .tab-for input[type="text"] {
-    width: 92%;
-  }
-  input.pay-logo {
-    width: 76.5% !important;
-  }
-  .payment-info form input[type="submit"] {
-    width: 32%;
-    margin-bottom: 19px;
-  }
-  .tab-form-left {
-    float: left;
-    width: 100%;
-  }
-  .user-form ul li {
-    width: 42.5%;
-    margin-right: 6.5%;
-  }
-  .tab-form-right {
-    float: right;
-    width: 100%;
-    margin-top: 20px;
-  }
-  .tab-form-right input[type="text"] {
-    width: 92%;
-  }
-  .user-right {
-    width: 30%;
-  }
-  .payment-info form input[type="submit"] {
-    padding: 7px 0;
-  }
-  p.footer {
-    margin: 20px auto 0 auto;
-  }
-}
+//.nav-xs{
+//  width: 75px;
+//}
+//
+//.nav-xs{
+//  min-width: 75px !important;
+//  //background-color: #193048 !important;
+//  section{
+//    nav{
+//      ul{
+//        li{
+//
+//          a{
+//            //border-bottom: 0.5px solid #F5F5F5;
+//            span {
+//
+//              min-width: 75px !important;
+//              text-align: center !important;
+//            }
+//            //span:hover{
+//            //  background-color: #4cc0c1;
+//            //}
+//
+//          }
+//
+//        }
+//      }
+//    }
+//  }
+//}
