--- a/app/views/sales/invoice.js.haml
+++ b/app/views/sales/invoice.js.haml
@@ -1,2 +1,3 @@
 $('.remote_container').html("#{j render 'sales/shared/invoice_tab'}");
 $("#invoice-modal").modal('toggle');
+$('#btn-print').click(function(){printDiv('print-me');});
