chenge cash and card image name

--- a/app/views/sales/shared/_payment.html.haml
+++ b/app/views/sales/shared/_payment.html.haml
@@ -23,7 +23,7 @@
           .col-xs-6.col-sm-6.col-md-12.col-lg-12
             %span.title Cash/Card
             = f.radio_button :payment_type , 'cash_and_card'
-          = image_tag('cash_card.png' , class: 'img-rounded col-xs-4 col-sm-4 col-md-12 col-lg-12 m-auto' , alt: 'Card')
+          = image_tag('cash_and_card.png' , class: 'img-rounded col-xs-4 col-sm-4 col-md-12 col-lg-12 m-auto' , alt: 'Card')
           .clear
       .col-xs-12.col-sm-12.col-md-4.col-lg-4.m-t-sm.col-lg-offset-1
         .product-chooser-item
